--- a/Main.xaml
+++ b/Main.xaml
@@ -125,7 +125,7 @@
       <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="650,528.3233333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="1164,2959.3333333333335" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="outputdt" />
       <Variable x:TypeArguments="sd:DataTable" Name="finaldt" />
@@ -141,7 +141,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
+    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="1164,120" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
       <ui:ReadRange.DataTable>
         <OutArgument x:TypeArguments="sd:DataTable">
           <CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_1">outputdt</CSharpReference>
@@ -149,7 +149,7 @@
       </ui:ReadRange.DataTable>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
@@ -159,7 +159,7 @@
         </InArgument>
       </ui:ReadRange.WorkbookPath>
     </ui:ReadRange>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="1164,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">
           <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_10">outputMonth</CSharpReference>
@@ -177,7 +177,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:InputDialog>
-    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
+    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="1164,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
       <ui:IfElseIfV2.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_80">outputMonth == "January"</CSharpValue>
@@ -700,7 +700,7 @@
         </Sequence>
       </ui:IfElseIfV2.Then>
     </ui:IfElseIfV2>
-    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
+    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="1164,57.333333333333336" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
       <ui:FilterDataTable.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_125">outputdt</CSharpValue>
@@ -751,7 +751,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:FilterDataTable>
-    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
+    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="1164,57.333333333333336" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
       <ui:WriteRange.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_126">finaldt</CSharpValue>
@@ -769,7 +769,7 @@
         </InArgument>
       </ui:WriteRange.WorkbookPath>
     </ui:WriteRange>
-    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="450,48" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="C:\\Users\\kikumars\\Deloitte (O365D)\\CHRISTUS Health Pod Engagement - General\\PTO Tracker (under development)\\EFA\\CHRISTUS_PTO-EFA_2026.xlsm">
+    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="1164,2587.3333333333335" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="C:\\Users\\kikumars\\Deloitte (O365D)\\CHRISTUS Health Pod Engagement - General\\PTO Tracker (under development)\\EFA\\CHRISTUS_PTO-EFA_2026.xlsm">
       <ueab:ExcelApplicationCard.Body>
         <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
           <ActivityAction.Argument>
@@ -800,7 +800,7 @@
                   </InArgument>
                 </ueab:ExecuteMacroX.Workbook>
               </ueab:ExecuteMacroX>
-              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="528,1012.6666666666666" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="60" Version="V5">
+              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="528,1012.6666666666666" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="61" Version="V5">
                 <uix:NCheckState.IfExists>
                   <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="486,605.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_30">
                     <sap:WorkflowViewStateService.ViewState>
@@ -945,7 +945,7 @@
       </ueab:ExcelApplicationCard.Body>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
