User Agreement Set for all Inputs and Writing

--- a/Main.xaml
+++ b/Main.xaml
@@ -127,10 +127,11 @@
   </TextExpression.ReferencesForImplementation>
   <sap:WorkflowViewStateService.ViewState>
     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-      <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
+      <x:Boolean x:Key="ShouldExpandAll">False</x:Boolean>
+      <x:Boolean x:Key="ShouldCollapseAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="1164,9448.666666666666" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="920.6666666666666,1272" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="outputdt" />
       <Variable x:TypeArguments="sd:DataTable" Name="finaldt" />
@@ -146,7 +147,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Assign sap:VirtualizedContainerService.HintSize="1164,176.66666666666666" sap2010:WorkflowViewState.IdRef="Assign_32">
+    <Assign sap:VirtualizedContainerService.HintSize="910,176.66666666666666" sap2010:WorkflowViewState.IdRef="Assign_32">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">
           <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_39">User</CSharpReference>
@@ -155,8 +156,13 @@
       <Assign.Value>
         <InArgument x:TypeArguments="x:String">kikumars</InArgument>
       </Assign.Value>
+      <sap:WorkflowViewStateService.ViewState>
+        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+        </scg:Dictionary>
+      </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="1164,120" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
+    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="910,120" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
       <ui:ReadRange.DataTable>
         <OutArgument x:TypeArguments="sd:DataTable">
           <CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_1">outputdt</CSharpReference>
@@ -165,7 +171,7 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+          <x:Boolean x:Key="IsPinned">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:ReadRange.WorkbookPath>
@@ -174,7 +180,7 @@
         </InArgument>
       </ui:ReadRange.WorkbookPath>
     </ui:ReadRange>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="1164,332.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">
           <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_10">outputMonth</CSharpReference>
@@ -192,7 +198,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:InputDialog>
-    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="1164,5865.333333333333" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
+    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
       <ui:IfElseIfV2.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_80">outputMonth == "January"</CSharpValue>
@@ -715,7 +721,7 @@
         </Sequence>
       </ui:IfElseIfV2.Then>
     </ui:IfElseIfV2>
-    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="1164,196" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
+    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
       <ui:FilterDataTable.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_125">outputdt</CSharpValue>
@@ -766,7 +772,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:FilterDataTable>
-    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="1164,148" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
+    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="910,148" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
       <ui:WriteRange.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_126">finaldt</CSharpValue>
@@ -774,30 +780,36 @@
       </ui:WriteRange.DataTable>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:WriteRange.WorkbookPath>
         <InArgument x:TypeArguments="x:String">
-          <CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_128">@"C:\Users\kikumars\Deloitte (O365D)\CHRISTUS Health Pod Engagement - General\PTO Tracker (under development)\EFA\CHRISTUS_PTO-EFA_2026.xlsm"</CSharpValue>
+          <CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_132">string.Format(@"C:\Users\{0}\Deloitte (O365D)\CHRISTUS Health Pod Engagement - General\PTO Tracker (under development)\EFA\CHRISTUS_PTO-EFA_2026.xlsm",User)</CSharpValue>
         </InArgument>
       </ui:WriteRange.WorkbookPath>
     </ui:WriteRange>
-    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="1164,2587.3333333333335" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None" WorkbookPath="C:\\Users\\kikumars\\Deloitte (O365D)\\CHRISTUS Health Pod Engagement - General\\PTO Tracker (under development)\\EFA\\CHRISTUS_PTO-EFA_2026.xlsm">
+    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="910,632.6666666666666" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None">
       <ueab:ExcelApplicationCard.Body>
         <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="Excel" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="1130,2244" sap2010:WorkflowViewState.IdRef="Sequence_17">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="876,289.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_17">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                <x:Boolean x:Key="IsPinned">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Parallel DisplayName="Parallel Branches for Clear Calendar" sap:VirtualizedContainerService.HintSize="1096,1092" sap2010:WorkflowViewState.IdRef="Parallel_1">
-              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="474,1012.6666666666666" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_1" MacroName="ClearCalendarPTO_AllMonths">
+            <Parallel DisplayName="Parallel Branches for Clear Calendar" sap:VirtualizedContainerService.HintSize="842,119.33333333333333" sap2010:WorkflowViewState.IdRef="Parallel_1">
+              <sap:WorkflowViewStateService.ViewState>
+                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                  <x:Boolean x:Key="IsPinned">True</x:Boolean>
+                </scg:Dictionary>
+              </sap:WorkflowViewStateService.ViewState>
+              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_1" MacroName="ClearCalendarPTO_AllMonths">
                 <ueab:ExecuteMacroX.Body>
                   <ActivityAction>
                     <Sequence DisplayName="Do" sap2010:WorkflowViewState.IdRef="Sequence_18">
@@ -809,15 +821,21 @@
                     </Sequence>
                   </ActivityAction>
                 </ueab:ExecuteMacroX.Body>
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                    <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
                 <ueab:ExecuteMacroX.Workbook>
                   <InArgument x:TypeArguments="ue:IWorkbookQuickHandle">
                     <CSharpValue x:TypeArguments="ue:IWorkbookQuickHandle" sap2010:WorkflowViewState.IdRef="CSharpValue`1_129">Excel</CSharpValue>
                   </InArgument>
                 </ueab:ExecuteMacroX.Workbook>
               </ueab:ExecuteMacroX>
-              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="528,1012.6666666666666" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="61" Version="V5">
+              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="61" Version="V5">
                 <uix:NCheckState.IfExists>
-                  <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="486,605.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_30">
+                  <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="450,25.333333333333332" sap2010:WorkflowViewState.IdRef="Sequence_30">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -861,7 +879,7 @@
                   </Sequence>
                 </uix:NCheckState.IfExists>
                 <uix:NCheckState.IfNotExists>
-                  <Sequence DisplayName="Target does not appear" sap:VirtualizedContainerService.HintSize="486,90.66666666666667" sap2010:WorkflowViewState.IdRef="Sequence_31">
+                  <Sequence DisplayName="Target does not appear" sap:VirtualizedContainerService.HintSize="450,25.333333333333332" sap2010:WorkflowViewState.IdRef="Sequence_31">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -872,10 +890,21 @@
                 <uix:NCheckState.Target>
                   <uix:TargetAnchorable DesignTimeRectangle="68, 57, 313, 33" ElementType="Text" ElementVisibilityArgument="Interactive" FullSelectorArgument="&lt;wnd ctrlid='65535' title='Cleared PTO codes (PT/S/H1/MT/U and -REQ) from Jan–Dec. FH prese*' /&gt;" Guid="4f625396-ab13-45c3-8c10-688a8792f2ad" InformativeScreenshot="d91881d9d754d2bf91b144cd6f25541c.jpg" ScopeSelectorArgument="&lt;wnd app='excel.exe' cls='#32770' title='Microsoft Excel' /&gt;" SearchSteps="Selector" Version="V6" WaitForReadyArgument="Interactive" />
                 </uix:NCheckState.Target>
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                    <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
               </uix:NCheckState>
             </Parallel>
-            <Parallel DisplayName="Parallel Branches for Map to Calendar" sap:VirtualizedContainerService.HintSize="1096,1092" sap2010:WorkflowViewState.IdRef="Parallel_2">
-              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="474,1022" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_2" MacroName="MapPTO_ToCalendar">
+            <Parallel DisplayName="Parallel Branches for Map to Calendar" sap:VirtualizedContainerService.HintSize="842,110" sap2010:WorkflowViewState.IdRef="Parallel_2">
+              <sap:WorkflowViewStateService.ViewState>
+                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                  <x:Boolean x:Key="IsPinned">True</x:Boolean>
+                </scg:Dictionary>
+              </sap:WorkflowViewStateService.ViewState>
+              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_2" MacroName="MapPTO_ToCalendar">
                 <ueab:ExecuteMacroX.Body>
                   <ActivityAction>
                     <Sequence DisplayName="Do" sap2010:WorkflowViewState.IdRef="Sequence_22">
@@ -893,7 +922,7 @@
                   </InArgument>
                 </ueab:ExecuteMacroX.Workbook>
               </ueab:ExecuteMacroX>
-              <uix:NCheckState DisplayName="Check App State 'Mapping complete (Draft…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="528,1022" sap2010:WorkflowViewState.IdRef="NCheckState_5" IsLoose="True" Timeout="60" Version="V5">
+              <uix:NCheckState DisplayName="Check App State 'Mapping complete (Draft…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="NCheckState_5" IsLoose="True" Timeout="60" Version="V5">
                 <uix:NCheckState.IfExists>
                   <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="486,611.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_33">
                     <sap:WorkflowViewStateService.ViewState>
@@ -961,9 +990,14 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">False</x:Boolean>
+          <x:Boolean x:Key="IsPinned">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
+      <ueab:ExcelApplicationCard.WorkbookPath>
+        <InArgument x:TypeArguments="x:String">
+          <CSharpValue x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpValue`1_133">string.Format(@"C:\Users\{0}\Deloitte (O365D)\CHRISTUS Health Pod Engagement - General\PTO Tracker (under development)\EFA\CHRISTUS_PTO-EFA_2026.xlsm",User)</CSharpValue>
+        </InArgument>
+      </ueab:ExcelApplicationCard.WorkbookPath>
     </ueab:ExcelApplicationCard>
   </Sequence>
 </Activity>
