--- a/Main.xaml
+++ b/Main.xaml
@@ -2,8 +2,6 @@
   <x:Members>
     <x:Property Name="emp" Type="InArgument(x:String)" />
     <x:Property Name="User" Type="InArgument(x:String)" />
-    <x:Property Name="empRowIndex" Type="OutArgument(x:Int32)" />
-    <x:Property Name="dateColIndex" Type="OutArgument(x:Int32)" />
     <x:Property Name="ptoDate" Type="InArgument(s:DateTime)" />
     <x:Property Name="dtCal" Type="InArgument(sd:DataTable)" />
   </x:Members>
@@ -131,7 +129,7 @@
       <x:Boolean x:Key="ShouldCollapseAll">True</x:Boolean>
     </scg:Dictionary>
   </sap:WorkflowViewStateService.ViewState>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="920.6666666666666,1272" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="1206.6666666666665,528.3233333333333" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="outputdt" />
       <Variable x:TypeArguments="sd:DataTable" Name="finaldt" />
@@ -147,7 +145,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Assign sap:VirtualizedContainerService.HintSize="910,176.66666666666666" sap2010:WorkflowViewState.IdRef="Assign_32">
+    <Assign sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="Assign_32">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">
           <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_39">User</CSharpReference>
@@ -158,11 +156,11 @@
       </Assign.Value>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="910,120" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
+    <ui:ReadRange Range="{x:Null}" WorkbookPathResource="{x:Null}" AddHeaders="True" DisplayName="Read  PTO DATA" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="ReadRange_1" SheetName="Christus_Emp_Data">
       <ui:ReadRange.DataTable>
         <OutArgument x:TypeArguments="sd:DataTable">
           <CSharpReference x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpReference`1_1">outputdt</CSharpReference>
@@ -171,7 +169,7 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:ReadRange.WorkbookPath>
@@ -180,7 +178,7 @@
         </InArgument>
       </ui:ReadRange.WorkbookPath>
     </ui:ReadRange>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Month Dialog" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Select the Month " OptionsString="ALL;January;February;March;April;May;June;July;August;September;October;November;December" TopMost="False">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">
           <CSharpReference x:TypeArguments="x:String" sap2010:WorkflowViewState.IdRef="CSharpReference`1_10">outputMonth</CSharpReference>
@@ -198,7 +196,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:InputDialog>
-    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
+    <ui:IfElseIfV2 DisplayName="Else If" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="IfElseIfV2_1">
       <ui:IfElseIfV2.Condition>
         <InArgument x:TypeArguments="x:Boolean">
           <CSharpValue x:TypeArguments="x:Boolean" sap2010:WorkflowViewState.IdRef="CSharpValue`1_80">outputMonth == "January"</CSharpValue>
@@ -721,7 +719,7 @@
         </Sequence>
       </ui:IfElseIfV2.Then>
     </ui:IfElseIfV2>
-    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="910,57.333333333333336" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
+    <ui:FilterDataTable DisplayName="Filter Month" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="FilterDataTable_1" SelectColumnsMode="Remove">
       <ui:FilterDataTable.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_125">outputdt</CSharpValue>
@@ -772,7 +770,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </ui:FilterDataTable>
-    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="910,148" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
+    <ui:WriteRange StartingCell="{x:Null}" WorkbookPathResource="{x:Null}" DisplayName="Write Workbook to PTO Tracker" sap:VirtualizedContainerService.HintSize="450,57.333333333333336" sap2010:WorkflowViewState.IdRef="WriteRange_1" SheetName="Sheet1">
       <ui:WriteRange.DataTable>
         <InArgument x:TypeArguments="sd:DataTable">
           <CSharpValue x:TypeArguments="sd:DataTable" sap2010:WorkflowViewState.IdRef="CSharpValue`1_126">finaldt</CSharpValue>
@@ -781,7 +779,7 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ui:WriteRange.WorkbookPath>
@@ -790,26 +788,26 @@
         </InArgument>
       </ui:WriteRange.WorkbookPath>
     </ui:WriteRange>
-    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="910,632.6666666666666" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None">
+    <ueab:ExcelApplicationCard Password="{x:Null}" ReadFormatting="{x:Null}" SensitivityLabel="{x:Null}" DisplayName="Use Excel File" sap:VirtualizedContainerService.HintSize="450,48" sap2010:WorkflowViewState.IdRef="ExcelApplicationCard_2" ResizeWindow="None" SensitivityOperation="None">
       <ueab:ExcelApplicationCard.Body>
         <ActivityAction x:TypeArguments="ue:IWorkbookQuickHandle">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="ue:IWorkbookQuickHandle" Name="Excel" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="876,289.3333333333333" sap2010:WorkflowViewState.IdRef="Sequence_17">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="1130,25.333333333333332" sap2010:WorkflowViewState.IdRef="Sequence_17">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                <x:Boolean x:Key="IsPinned">True</x:Boolean>
+                <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Parallel DisplayName="Parallel Branches for Clear Calendar" sap:VirtualizedContainerService.HintSize="842,119.33333333333333" sap2010:WorkflowViewState.IdRef="Parallel_1">
+            <Parallel DisplayName="Parallel Branches for Clear Calendar" sap:VirtualizedContainerService.HintSize="1096,446.6666666666667" sap2010:WorkflowViewState.IdRef="Parallel_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsPinned">True</x:Boolean>
+                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_1" MacroName="ClearCalendarPTO_AllMonths">
+              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="474,367.3333333333333" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_1" MacroName="ClearCalendarPTO_AllMonths">
                 <ueab:ExecuteMacroX.Body>
                   <ActivityAction>
                     <Sequence DisplayName="Do" sap2010:WorkflowViewState.IdRef="Sequence_18">
@@ -833,7 +831,7 @@
                   </InArgument>
                 </ueab:ExecuteMacroX.Workbook>
               </ueab:ExecuteMacroX>
-              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="61" Version="V5">
+              <uix:NCheckState DisplayName="Check App State 'Cleared PTO codes (PT/S…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="492,367.3333333333333" sap2010:WorkflowViewState.IdRef="NCheckState_4" IsLoose="True" Timeout="61" Version="V5">
                 <uix:NCheckState.IfExists>
                   <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="450,25.333333333333332" sap2010:WorkflowViewState.IdRef="Sequence_30">
                     <sap:WorkflowViewStateService.ViewState>
@@ -898,13 +896,13 @@
                 </sap:WorkflowViewStateService.ViewState>
               </uix:NCheckState>
             </Parallel>
-            <Parallel DisplayName="Parallel Branches for Map to Calendar" sap:VirtualizedContainerService.HintSize="842,110" sap2010:WorkflowViewState.IdRef="Parallel_2">
+            <Parallel DisplayName="Parallel Branches for Map to Calendar" sap:VirtualizedContainerService.HintSize="1096,1092" sap2010:WorkflowViewState.IdRef="Parallel_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsPinned">True</x:Boolean>
+                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_2" MacroName="MapPTO_ToCalendar">
+              <ueab:ExecuteMacroX Result="{x:Null}" DisplayName="Run Spreadsheet Macro" sap:VirtualizedContainerService.HintSize="474,1022" sap2010:WorkflowViewState.IdRef="ExecuteMacroX_2" MacroName="MapPTO_ToCalendar">
                 <ueab:ExecuteMacroX.Body>
                   <ActivityAction>
                     <Sequence DisplayName="Do" sap2010:WorkflowViewState.IdRef="Sequence_22">
@@ -922,7 +920,7 @@
                   </InArgument>
                 </ueab:ExecuteMacroX.Workbook>
               </ueab:ExecuteMacroX>
-              <uix:NCheckState DisplayName="Check App State 'Mapping complete (Draft…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="374,40" sap2010:WorkflowViewState.IdRef="NCheckState_5" IsLoose="True" Timeout="60" Version="V5">
+              <uix:NCheckState DisplayName="Check App State 'Mapping complete (Draft…'" HealingAgentBehavior="Disabled" sap:VirtualizedContainerService.HintSize="528,1022" sap2010:WorkflowViewState.IdRef="NCheckState_5" IsLoose="True" Timeout="60" Version="V5">
                 <uix:NCheckState.IfExists>
                   <Sequence DisplayName="Target appears" sap:VirtualizedContainerService.HintSize="486,611.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_33">
                     <sap:WorkflowViewStateService.ViewState>
@@ -990,7 +988,7 @@
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-          <x:Boolean x:Key="IsPinned">True</x:Boolean>
+          <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <ueab:ExcelApplicationCard.WorkbookPath>
